fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -125,4 +125,15 @@ fabric.properties
 *.class
 *.log
 
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+
 # End of https://www.gitignore.io/api/linux,scala,intellij,jetbrains
